<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#ffffff"
        android:orientation="vertical">


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:gravity="center">
          <ImageView
              android:id="@+id/activityImageTitle"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:src="@drawable/raman_logo_circle"
              android:layout_gravity="center"
              android:layout_marginLeft="20dp"/>

          <TextView
              android:id="@+id/activityTitle"
              android:layout_width="wrap_content"
              android:layout_height="20dp"
              android:layout_gravity="center"
              android:layout_marginLeft="10dp"
              android:fontFamily="casual"
              android:text="Raman Group"
              android:textSize="15sp"
              android:textStyle="bold"/>

<!--          <View-->
<!--              android:layout_marginTop="30dp"-->
<!--              android:layout_width="100dp"-->
<!--              android:layout_height="2dp"-->
<!--              android:background="#000000"-->
<!--              android:layout_gravity="center"-->
<!--              android:gravity="center"/>-->
      </LinearLayout>



    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_accelerator"
                android:layout_width="350dp"
                android:layout_height="270dp"
                android:layout_gravity="center">
                <!--        card_view:cardCornerRadius="4dp">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/education_logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_horizontal"
                        android:text="Raman Accelerator"
                        android:textAlignment="center"
                        android:textColor="#FF9900"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/accelerator_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textColor="#606060"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_international"
                android:layout_width="350dp"
                android:layout_height="270dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <!--        card_view:cardCornerRadius="4dp">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/education_logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_horizontal"
                        android:text="Raman International"
                        android:textAlignment="center"
                        android:textColor="#B565A7"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/international_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textColor="#606060"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_education"
                android:layout_width="350dp"
                android:layout_height="270dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <!--        card_view:cardCornerRadius="4dp">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/education_logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_horizontal"
                        android:text="Raman Educational Groups"
                        android:textAlignment="center"
                        android:textColor="#00BFFF"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/education_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textColor="#606060"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_scientific"
                android:layout_width="350dp"
                android:layout_height="270dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <!--        card_view:cardCornerRadius="4dp">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/education_logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_horizontal"
                        android:text="Raman Scientific Projects"
                        android:textAlignment="center"
                        android:textColor="#B565A7"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/scientific_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textColor="#606060"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_network"
                android:layout_width="350dp"
                android:layout_height="270dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <!--        card_view:cardCornerRadius="4dp">-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/education_logo"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_horizontal"
                        android:text="Raman Network-Based Projects"
                        android:textAlignment="center"
                        android:textColor="#FF6F61"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/network_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textColor="#606060"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>